# libvterm-haskell

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  flake.nix  justfile  libvterm-haskell.cabal
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
cbits/: helpers.c  helpers.h
nix/: project.nix
src/System/Terminal/: LibVTerm.hs
src/System/Terminal/LibVTerm/: Keyboard.hs  Raw.hs  Screen.hs  Types.hs
test/: Main.hs
